--- a/rpm/harbour-daedalus.yaml
+++ b/rpm/harbour-daedalus.yaml
@@ -29,8 +29,9 @@ PkgConfigBR:
   - Qt5Sparql
 
 # Build dependencies without a pkgconfig setup can be listed here
-# PkgBR:
-#   - package-needed-to-build
+PkgBR:
+  - libqt5sparql-devel
+
 
 # Runtime dependencies which are not automatically detected
 Requires:
