--- a/rpm/harbour-daedalus.yaml
+++ b/rpm/harbour-daedalus.yaml
@@ -27,6 +27,7 @@ PkgConfigBR:
   - Qt5Quick
   - Qt5Multimedia
   - Qt5Sparql
+  - Qt5Dbus
 
 # Build dependencies without a pkgconfig setup can be listed here
 # PkgBR:
